// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/lightningcss > plugin-lightningcss should be cancelable by users with false options 1`] = `{}`;

exports[`plugins/lightningcss > plugin-lightningcss should be configurable by users 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-lightningcss/src/loader.cjs",
        "options": {
          "cssModules": {
            "dashedIdents": true,
            "pattern": "[hash]-[local]",
          },
          "errorRecovery": true,
          "implementation": {
            "browserslistToTargets": [Function],
            "transform": [Function],
          },
          "targets": {
            "chrome": 5701632,
            "edge": 5767168,
            "firefox": 5111808,
            "safari": 917504,
          },
          "visitor": {
            "Length": [Function],
          },
        },
      },
    ],
  },
]
`;

exports[`plugins/lightningcss > plugin-lightningcss should be configurable by users 2`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": true,
        "format": {
          "asciiOnly": true,
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  LightningCssMinimizerRspackPlugin {
    "_args": [
      undefined,
    ],
    "affectedHooks": undefined,
    "name": "LightningCssMinimizerRspackPlugin",
  },
]
`;

exports[`plugins/lightningcss > plugin-lightningcss should be configurable by users with true options 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-lightningcss/src/loader.cjs",
        "options": {
          "targets": {
            "chrome": 5701632,
            "edge": 5767168,
            "firefox": 5111808,
            "safari": 917504,
          },
        },
      },
    ],
  },
]
`;

exports[`plugins/lightningcss > plugin-lightningcss should be configurable by users with true options 2`] = `
[
  SwcJsMinimizerRspackPlugin {
    "_args": [
      {
        "extractComments": true,
        "format": {
          "asciiOnly": true,
        },
      },
    ],
    "affectedHooks": "compilation",
    "name": "SwcJsMinimizerRspackPlugin",
  },
  LightningCssMinimizerRspackPlugin {
    "_args": [
      undefined,
    ],
    "affectedHooks": undefined,
    "name": "LightningCssMinimizerRspackPlugin",
  },
]
`;

exports[`plugins/lightningcss > plugin-lightningcss should replace postcss-loader with lightningcss-loader with default options 1`] = `
[
  {
    "resolve": {
      "preferRelative": true,
    },
    "sideEffects": true,
    "test": /\\\\\\.css\\$/,
    "use": [
      {
        "loader": "<ROOT>/node_modules/<PNPM_INNER>/@rspack/core/dist/builtin-plugin/css-extract/loader.js",
      },
      {
        "loader": "<ROOT>/packages/core/compiled/css-loader",
        "options": {
          "importLoaders": 1,
          "modules": {
            "auto": true,
            "exportGlobals": false,
            "exportLocalsConvention": "camelCase",
            "localIdentName": "[path][name]__[local]-[hash:base64:6]",
            "namedExport": false,
          },
          "sourceMap": false,
        },
      },
      {
        "loader": "<ROOT>/packages/plugin-lightningcss/src/loader.cjs",
        "options": {
          "targets": {
            "chrome": 5701632,
            "edge": 5767168,
            "firefox": 5111808,
            "safari": 917504,
          },
        },
      },
    ],
  },
]
`;

exports[`plugins/lightningcss > plugin-lightningcss should set lightningCssMinifyPlugin with default options 1`] = `undefined`;
